src/test/pass/multi_methods.j
class Main {
    Void main() {
        return;
    }
}

class A {
    Void a() {
        return;
    }

    Void b() {
        return;
    }

    Void c() {
        return;
    }

    Void d() {
        return;
    }
}
