src/test/fail/arg_type_mismatch.j
class Main {
    Void main() {
        return;
    }
}

class A {
    Void a(Int i) {
        a("a");
        return;
    }
}
